--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
   "name": "acamica-node-api",
-  "version": 2
+  "version": 2,
+  "builds": [
+    {
+      "src": "./api/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
